<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/scanOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.3"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/scanFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:background="@drawable/scan_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />

    <ImageButton
        android:id="@+id/btnFlash"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/flash"
        android:src="@drawable/ic_flash_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />

    <ImageButton
        android:id="@+id/btnGallery"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/gallery"
        android:padding="16dp"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCapture"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white" />

    <ImageButton
        android:id="@+id/btnCapture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/capture"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>